--- a/content/posts/c91.md
+++ b/content/posts/c91.md
@@ -7,7 +7,7 @@ date: 2016-12-27T00:00:00Z
 
 | <span style="font-size:1.3em; color:red;">[新刊]</span> チーズケーキ技術 16.12 |
 | :---: |
-| ![](/16.12/cover.png) |
+| ![](/16.12/cover.jpg) |
 | ￥1,000 |
 | [詳細/試し読み](/16.12/) |
 
