--- a/content/posts/c92.md
+++ b/content/posts/c92.md
@@ -7,7 +7,7 @@ date: 2017-08-11T00:00:00Z
 
 | <span style="font-size:1.2em; color:red;">[新刊]</span> チーズケーキ技術 17.08 | <span style="font-size:1.2em; color:green;">[既刊]</span> チーズケーキ技術 16.12 |
 | :---: | :---: |
-| ![](/17.08/cover.png) | ![](/16.12/cover.png) |
+| ![](/17.08/cover.jpg) | ![](/16.12/cover.jpg) |
 | ￥1,000 | ￥1,000 |
 | [詳細/試し読み](/17.08/) | [詳細/試し読み](/16.12/) |
 
